fix issue with alignment of sin fronteras icon in the social media section in the footer

--- a/components/footer/social-media.module.scss
+++ b/components/footer/social-media.module.scss
@@ -1,5 +1,6 @@
 .container {
   display: flex;
+  align-items: flex-start;
   color: white;
   margin-top: 1rem;
   @media (min-width: 1000px) {
@@ -29,6 +30,13 @@
 }
 
 .container svg {
+  margin: 0 1rem;
+  @media (min-width: 1000px) {
+    margin: 0;
+  }
+}
+
+.image {
   margin: 0 1rem;
   @media (min-width: 1000px) {
     margin: 0;
